[gd_scene load_steps=9 format=2]

[ext_resource path="res://Title/Background.png" type="Texture" id=1]
[ext_resource path="res://Title/Foreground.png" type="Texture" id=2]
[ext_resource path="res://Title/Bill.png" type="Texture" id=3]
[ext_resource path="res://Title/TitleText.png" type="Texture" id=4]
[ext_resource path="res://Title/TitleScreen.gd" type="Script" id=5]
[ext_resource path="res://Font.tres" type="DynamicFont" id=6]

[sub_resource type="Animation" id=1]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Background/Sprite:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ) ]
}

[sub_resource type="Animation" id=2]
resource_name = "Wobble"
tracks/0/type = "value"
tracks/0/path = NodePath("Background/Sprite:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray(  ),
"transitions": PoolRealArray(  ),
"update": 0,
"values": [  ]
}

[node name="Level" type="Node2D"]
script = ExtResource( 5 )

[node name="Background" type="Position2D" parent="."]
position = Vector2( 160, 90 )

[node name="Sprite" type="Sprite" parent="Background"]
texture = ExtResource( 1 )

[node name="Foreground" type="Position2D" parent="."]
position = Vector2( 160, 90 )

[node name="Sprite" type="Sprite" parent="Foreground"]
texture = ExtResource( 2 )

[node name="TitleText" type="Position2D" parent="."]
position = Vector2( 160, 71 )

[node name="Sprite" type="Sprite" parent="TitleText"]
texture = ExtResource( 4 )

[node name="Bill" type="Sprite" parent="."]
position = Vector2( 0, 15 )
texture = ExtResource( 3 )
centered = false

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/RESET = SubResource( 1 )
anims/Wobble = SubResource( 2 )

[node name="StartLabel" type="Label" parent="."]
margin_left = 108.0
margin_top = 143.0
margin_right = 284.0
margin_bottom = 161.0
rect_scale = Vector2( 0.6, 0.6 )
custom_fonts/font = ExtResource( 6 )
text = "Press Space"

[node name="Timer" type="Timer" parent="StartLabel"]
wait_time = 0.75
autostart = true

[connection signal="timeout" from="StartLabel/Timer" to="." method="_on_Timer_timeout"]
